--- a/package.json
+++ b/package.json
@@ -7,11 +7,15 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "mysql2": "^3.6.5",
-    "jsonwebtoken": "^9.0.0",
+    "@prisma/client": "^7.3.0",
     "bcryptjs": "^2.4.3",
-    "dotenv": "^16.0.0"
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
+    "mysql2": "^3.6.5"
+  },
+  "devDependencies": {
+    "prisma": "^7.3.0"
   }
 }
