fix: add postinstall script to auto-generate prisma schema on npm install

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "node index.js",
-    "start": "node index.js"
+    "start": "node index.js",
+    "postinstall": "npx prisma generate || true"
   },
   "dependencies": {
     "@prisma/client": "^4.16.2",
