--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "node index.js",
     "start": "node index.js",
-    "postinstall": "npx prisma generate || true"
+    "postinstall": "npx prisma generate || true",
+    "migrate:push": "npx prisma db push --schema=prisma/schema.prisma"
   },
   "dependencies": {
     "@prisma/client": "^4.16.2",
